[gd_scene load_steps=7 format=2]

[ext_resource path="res://common/PlayerSideScroll/PlayerSideSkin.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/sidescroll_tileset/tileset_sidescroll-tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Screens/RayCast2D/EdgeDetection/EdgeDetectingPlayer.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 480, 49.3143 )

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 58 )

[node name="EdgeDetection" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 960, 720 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 80, 80 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -7, 0, 0, -6, 0, 1, -5, 0, 1, -4, 0, 1, -3, 0, 1, -2, 0, 1, -1, 0, 1, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 2, 65529, 0, 131072, 65530, 0, 65542, 65531, 0, 65537, 65532, 0, 65537, 65533, 0, 65537, 65534, 0, 65537, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65541, 6, 0, 131074, 131066, 0, 65536, 131067, 0, 65537, 131068, 0, 65537, 131069, 0, 65537, 131070, 0, 65537, 131071, 0, 65537, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65538, 196602, 0, 65536, 196603, 0, 65537, 196604, 0, 65537, 196605, 0, 65537, 196606, 0, 65537, 196607, 0, 65537, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65538, 262138, 0, 65536, 262139, 0, 65537, 262140, 0, 65537, 262141, 0, 65537, 262142, 0, 65537, 262143, 0, 65537, 196608, 0, 65537, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65538, 327667, 0, 0, 327668, 0, 1, 327669, 0, 1, 327670, 0, 1, 327671, 0, 1, 327672, 0, 1, 327673, 0, 1, 327674, 0, 131078, 327675, 0, 65537, 327676, 0, 65537, 327677, 0, 65537, 327678, 0, 65537, 327679, 0, 65537, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 131077, 262150, 0, 1, 262151, 0, 1, 262152, 0, 1, 262153, 0, 1, 262154, 0, 1, 262155, 0, 1, 262156, 0, 2, 262159, 0, 196611, 393203, 0, 131072, 393204, 0, 131073, 393205, 0, 131073, 393206, 0, 131073, 393207, 0, 131073, 393208, 0, 131073, 393209, 0, 131073, 393210, 0, 131073, 393211, 0, 131073, 393212, 0, 131073, 393213, 0, 131073, 393214, 0, 131073, 393215, 0, 131073, 327680, 0, 131073, 327681, 0, 131073, 327682, 0, 131073, 327683, 0, 131073, 327684, 0, 131073, 327685, 0, 131073, 327686, 0, 131073, 327687, 0, 131073, 327688, 0, 131073, 327689, 0, 131073, 327690, 0, 131073, 327691, 0, 131073, 327692, 0, 131074 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 960, 720 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="EdgeDetectingPlayer" type="RigidBody2D" parent="."]
position = Vector2( 960, 584 )
collision_mask = 5
mode = 2
physics_material_override = SubResource( 2 )
linear_damp = 10.0
applied_force = Vector2( 0, 5000 )
script = ExtResource( 3 )

[node name="Body" type="Node2D" parent="EdgeDetectingPlayer"]

[node name="PlayerSideSkin" parent="EdgeDetectingPlayer/Body" instance=ExtResource( 1 )]
position = Vector2( 0, 58 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeDetectingPlayer"]
shape = SubResource( 3 )

[node name="LeftRayCast2D" type="RayCast2D" parent="EdgeDetectingPlayer"]
position = Vector2( -25, 56 )
enabled = true

[node name="RightRayCast2D" type="RayCast2D" parent="EdgeDetectingPlayer"]
position = Vector2( 25, 56 )
enabled = true
